# dalton

./: .gitignore  Procfile  README.md  dalton.go  go.mod  go.sum  pyproject.toml  requirements.txt  soap.go
dalton/: api.py  crs.py  resources.py  soap.py
go-attempt/: dalton.go  go.mod  go.sum  request.xml  soap.go
go-attempt/cmd/dummy/: main.go
go-attempt/resources/: rtti_2012-01-13_ldb_types.xsd  rtti_2015-11-27_ldb_types.xsd  rtti_2016-02-16_ldb_types.xsd  rtti_2017-10-01_ldb.wsdl  rtti_2017-10-01_ldb_types.xsd
python/: pyproject.toml
resources/: combined.wsdl  rtti_2015-11-27_ldb.wsdl  rtti_2017-10-01_ldb.wsdl
