[tool.poetry]
name = "dalton"
version = "0.1.0"
description = "A REST / JSON Proxy for the Darwin Rail Data API"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
zeep = "^3.2"
flask = "^1.0"
flask-restful = "^0.3.7"
werkzeug = "^0.15.3"
jinja2 = "^2.11"
gunicorn = "^19.9"
flask-cors = "^3.0"
boltons = "^18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
